--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en"
->
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +10,5 @@
 
 <body>
     <h1>ideal Notes</h1>
-
 </body>
 </html>
